14795
Enum.java
```scala
public enum Enum {
  VALUE;
}
```

Ann.java
```scala
public @interface Ann {
  Enum value();
}
```

Use.scala
```scala
class Use {
  @Ann(Enum.VALUE)
  def foo {}
}
```

Compiling them together with scalac gives:
```scala
lamppc11:sandbox luc$$ ../build/pack/bin/scalac Enum.java Ann.java Use.scala 
Use.scala:2: error: annotation argument needs to be a constant; found: Enum.VALUE
  @Ann(Enum.VALUE)
            ^
one error found
```

Compiling java first, then scala works.

The same issue arises for static constants in Java source files.

https://lampsvn.epfl.ch/trac/scala/ticket/2764#comment:12
